- add luck calc - reduce scrollbar for mobile - improve mobile design for upgrade screen - fix batte displays

--- a/ui/src/app/globals.css
+++ b/ui/src/app/globals.css
@@ -187,7 +187,17 @@ h6 {
 
 body::-webkit-scrollbar,
 .table-scroll::-webkit-scrollbar {
-  width: 1em;
+  width : 0.5em;
+  height: 0.5em;
+}
+
+@media (min-width: 400px) {
+
+  body::-webkit-scrollbar,
+  .table-scroll::-webkit-scrollbar {
+    width : 1em;
+    height: 1em;
+  }
 }
 
 body::-webkit-scrollbar-track,
